[bugfix] nabber will go right on tablet

--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -3,7 +3,7 @@
         width:160px;
         float:left;
     }
-    .nav-ul {
+    .tb-navbar-right {
         float:right;
     }
     .navbar-nav li>a {
